--- a/appco.themetags.com/index.html
+++ b/appco.themetags.com/index.html
@@ -255,7 +255,7 @@
       >
         <div class="container">
           <div class="row align-items-center justify-content-between py-5">
-            <div class="col-md-7 col-lg-6 col-xl-5">
+            <div class="col-md-6">
               <div class="hero-content-left text-white">
                 <h1 class="text-white fw-bold">
                   Your all-in-one solution for your all Chaos!
@@ -267,37 +267,11 @@
                 </p>
                 <a href="#" class="btn app-store-btn" > <span ></span> Try Now</a>
 
-                 <!-- <form action="#" method="post" class="subscribe-form">
-                  <div class="d-flex align-items-center">
-                    <input
-                      type="text"
-                      class="form-control input"
-                      id="email"
-                      name="email"
-                      placeholder="info@yourdomain.com"
-                    />
-                    <input
-                      type="submit"
-                      class="button btn solid-btn"
-                      id="submit"
-                      value="Subscribe"
-                    />
-                  </div>
-                </form> -->
-
-                <!-- <div class="video-promo-content py-4 d-flex align-items-center">
-                  <a
-                    href="https://www.youtube.com/watch?v=9No-FiEInLA"
-                    class="popup-youtube video-play-icon-without-bip video-play-icon me-3"
-                    ><span class="ti-control-play"></span
-                  ></a>
-                  Watch Video Overview
-                </div>  -->
               </div>
             </div> 
-            <div class="col-md-5 col-lg-5">
-              <div class="hero-animation-img">
-                <img src="image/f0.png" alt="app"  style="height: 450px; width: 680px; padding: left 10px;  "/>
+            <div class="col-md-6">
+              <div class="hero-animation-img ">
+                <img src="image/f0.png" alt="app" class="w-100"/>
               </div>
             </div>
           </div>
@@ -524,26 +498,17 @@
           background: url('img/app-hero-bg.jpg') no-repeat center center / cover;">
         <div class="container">
           <div class="row align-items-center justify-content-between">
-            <div class="col-md-7">
-              <div class="download-content text-white text-center  pb-100">
+            <div class="col-md-12 text-center">
+              <div class="download-content text-white text-center pb-100" >
                 <h2 class="text-white">
                   Still, arent convinced?
                 </h2>
                 <p class="lead">
-                  Try out and experience the software, you will be. Use these Credentials and let us know what you think in the review! 
+                  Try out and experience the software, you will be. Use these Credentials and <br> let us know what you think in the review! 
 
                 </p>
 
                 
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="download-img d-flex align-items-end">
-                <!-- <img
-                  src="image/06.jpg"
-                  alt="download"
-                  class="img-fluid"
-                /> -->
               </div>
             </div>
           </div>
